[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/UI/settings_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/BWTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/ATARCE__.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ARARCE__Med.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/UI/Menus/ActionRemapper.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 56
outline_size = 20
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = -5
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 34
extra_spacing_char = -3
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="SettingMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -360.0
margin_right = 540.0
margin_bottom = 360.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.0
margin_top = -300.0
margin_right = 487.0
margin_bottom = 300.0
border_color = Color( 1, 1, 1, 1 )
border_width = 2.0
editor_only = false

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -206.5
margin_top = 48.0
margin_right = 206.5
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -207.5
margin_right = 250.0
margin_bottom = 207.5
rect_min_size = Vector2( 474, 400 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 446.0
margin_bottom = 371.0
custom_constants/separation = 10

[node name="AudioHeading" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_right = 446.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
text = "Audio"

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 446.0
margin_bottom = 101.0
rect_min_size = Vector2( 446, 0 )
columns = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_right = 140.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Sound"

[node name="SoundCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 144.0
margin_right = 444.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( -737, 90.5 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 30.0
margin_right = 140.0
margin_bottom = 54.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Volume"

[node name="SFXSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 144.0
margin_top = 28.0
margin_right = 444.0
margin_bottom = 56.0
rect_min_size = Vector2( 300, 0 )
min_value = -40.0
max_value = 0.0

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 446.0
margin_bottom = 121.0
custom_constants/separation = 10

[node name="ControlsHeading" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 446.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 2 )
text = "Controls"

[node name="GridContainer2" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 446.0
margin_bottom = 371.0
rect_min_size = Vector2( 446, 0 )
custom_constants/vseparation = 15
custom_constants/hseparation = 40
columns = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer2"]
margin_top = 33.0
margin_right = 157.0
margin_bottom = 57.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Player 1"

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/GridContainer2"]
margin_left = 197.0
margin_right = 417.0
margin_bottom = 90.0
custom_constants/separation = 10

[node name="ActionRemapper" parent="ScrollContainer/VBoxContainer/GridContainer2/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 220.0
margin_bottom = 40.0

[node name="ActionRemapper2" parent="ScrollContainer/VBoxContainer/GridContainer2/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 220.0
margin_bottom = 90.0
action = "p1_back"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer2"]
margin_top = 138.0
margin_right = 157.0
margin_bottom = 162.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Player 2"

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/GridContainer2"]
margin_left = 197.0
margin_top = 105.0
margin_right = 417.0
margin_bottom = 195.0
custom_constants/separation = 10

[node name="ActionRemapper" parent="ScrollContainer/VBoxContainer/GridContainer2/VBoxContainer2" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 220.0
margin_bottom = 40.0
action = "p2_forward"

[node name="ActionRemapper2" parent="ScrollContainer/VBoxContainer/GridContainer2/VBoxContainer2" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 220.0
margin_bottom = 90.0
action = "p2_back"

[node name="SaveButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -215.0
margin_top = -132.0
margin_right = -74.0
margin_bottom = -79.0
text = "Save"

[connection signal="toggled" from="ScrollContainer/VBoxContainer/GridContainer/SoundCheckBox" to="." method="_on_SoundCheckBox_toggled"]
[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_SFXSlider_drag_ended"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
